--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
   },
   "dependencies": {
     "@ark-ui/solid": "^2.2.0",
-    "@klass/core": "4.0.0-next.20",
-    "@klass/solid": "4.0.0-next.20",
+    "@klass/core": "4.0.0-next.22",
+    "@klass/solid": "4.0.0-next.22",
     "@nanostores/persistent": "^0.10.1",
     "@nanostores/solid": "^0.4.2",
-    "@solidjs/router": "^0.12.4",
+    "@solidjs/router": "^0.13.0",
     "clsx": "^2.1.0",
-    "lucide-solid": "^0.344.0",
+    "lucide-solid": "0.348.0",
     "nanostores": "^0.10.0",
     "solid-js": "^1.8.15",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@coloradix/tailwindcss": "^2.3.1",
+    "@coloradix/tailwindcss": "^2.3.2",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5",
     "vite-plugin-solid": "^2.10.1",
     "vite-tsconfig-paths": "^4.3.1"
   }
